fix pre-build event so that updating `adbt.thrift` will regenerate the client automatically

--- a/src/actordb-net.csproj
+++ b/src/actordb-net.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="&quot;$(SolutionDir)lib\thrift.exe&quot; --gen netcore -out &quot;$(ProjectDir)\..&quot; &quot;$(SolutionDir)lib\adbt.thrift&quot;" />
+    <Exec Command="&quot;$(SolutionDir)lib\thrift.exe&quot; --gen netcore -out &quot;$(ProjectDir)\Internal\Thrift\Generated&quot; &quot;$(SolutionDir)lib\adbt.thrift&quot;" />
   </Target>
 
 </Project>
