--- a/src/actordb-net.csproj
+++ b/src/actordb-net.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Thrift">
       <HintPath>..\lib\netstandard2.0\Thrift.dll</HintPath>
     </Reference>
